--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_USER=${MYSQL_USER}
-    container_name: ffc-auth-db
+    container_name: ffc-main-db
     volumes:
-      - ./db:/var/lib/mysql
+      - db:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   nestjs:
@@ -27,7 +27,7 @@ services:
       - '${APP_PORT}:${APP_PORT}'
     depends_on:
       - db
-    container_name: ffc-auth-nestjs
+    container_name: ffc-main-nestjs
     volumes:
       - .:/app
 
