--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.13.0",
     "bcrypt": "^5.1.0",
+    "ffc-prisma-package": "^1.4.3",
     "fs": "^0.0.1-security",
     "node-fetch": "^2.6.9",
     "reflect-metadata": "^0.1.13",
