--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.13.0",
     "bcrypt": "^5.1.0",
-    "ffc-prisma-package": "^2.0.0",
+    "ffc-prisma-package": "^2.1.0",
     "fs": "^0.0.1-security",
+    "nestjs-zod": "^2.3.2",
     "node-fetch": "^2.6.9",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
