--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,16 @@
     "tab.activeBorder": "#ff837a",
     "titleBar.border": "#ff5447"
   },
-  "peacock.color": "ff5447"
+  "peacock.color": "ff5447",
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    ".github": true,
+    ".vscode": true
+  },
+  "explorerExclude.backup": {}
 }
