--- a/.github/workflows/push-and-test.yml
+++ b/.github/workflows/push-and-test.yml
@@ -17,6 +17,13 @@ jobs:
       run: |
         echo "DATABASE_URL='${{ secrets.DATABASE_URL }}'" >> .env
 
+    - name: 🗝️ Create SSL keys from secrets
+      run: |
+        echo "${{ secrets.PK_SERVICE }}" > ./ssl/service-auth-public.pem
+        echo "${{ secrets.PK_USER }}" > ./ssl/user-auth-public.pem
+        echo "${{ secrets.SK_SERVICE }}" > ./ssl/service-auth-private.pem
+        echo "${{ secrets.SK_USER }}" > ./ssl/user-auth-private.pem
+
     - name: 📦 Install dependencies
       run: npm install
 
